# snoretoast

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  activationcallback.h  config.h.in  linkhelper.cpp  main.cpp  snoretoastactioncenterintegration.h  snoretoasts.cpp  snoretoasts.h  utils.cpp  utils.h  winrt-base.cpp  winrt-base.h
src/dynamic/: winrt-base.cpp  winrt-base.h
src/dynamic/api/: combaseapi.cpp  combaseapi.h  ntapi.cpp  ntapi.h  rterrorapi.cpp  rterrorapi.h
src/dynamic/base/: dllloader.h  dynamicapiloader.h  noncopyable.h
src/dynamic/utils/: datetimewrapper.cpp  datetimewrapper.h  stringwrapper.cpp  stringwrapper.h
